--- a/style.css
+++ b/style.css
@@ -53,5 +53,18 @@ h1, h2 {
 }
 
 main {
-    
+    max-width: 80rem;
+    background: var(--surface-color);
+    margin-inline: auto;
+    padding: 2.4rem;
+    border-radius: 2.4rem;
+
+    img {
+        border-radius: 1.6rem;
+        margin-bottom: 2.4rem;
+    };
+
+    section {
+        padding-inline: 2.4rem;
+    }
 }
