--- a/style.css
+++ b/style.css
@@ -91,4 +91,10 @@ main {
             color: var(--text-color-secondary);
         }
     }
+
+    .modo-preparo {
+        p {
+            margin-bottom: 1.2rem;
+        }
+    }
 }
